--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" 
+      type="image/png" 
+      href="images/colitics_icon.png">
   </head>
   <body>
     <header>
