--- a/index.html
+++ b/index.html
@@ -35,45 +35,77 @@
 
       <div id="parentMembers">
         <div class="members">
-            <img src="images/jonas.jpg" alt="" />
-            <h2>Hermann Popodi</h2>
-            <p></p>
-        </div>
-        <div class="members">
             <img src="images/syly.png" alt="" />
             <h2>Andreas Hofer</h2>
-            <p></p>
+            <div class="overlay">
+              <div class="content">
+                so good
+              </div>
+            </div>
         </div> 
         <div class="members">
             <img src="images/omg.png" alt="" />
             <h2>Luis Durnwalder</h2>
-            <p></p>
+            <div class="overlay">
+              <div class="content">
+                so good
+              </div>
+            </div>
         </div> 
         <div class="members">
             <img src="images/oemar.jpg" alt="" />
             <h2>Heinz-Christian Strache</h2>
-            <p></p>
+            <div class="overlay">
+              <div class="content">
+                so good
+              </div>
+            </div>
         </div> 
+        <div class="members">
+          <img src="images/unterberger.jpg" alt="" />
+          <h2>Stefan Unterberger</h2>
+          <div class="overlay">
+            <div class="content">
+              so good
+            </div>
+          </div>
+      </div> 
         <div class="members">
             <img src="images/simonn.png" alt="" />
             <h2>Peter Pernthaler</h2>
-            <p></p>
-        </div> 
-        <div class="members">
-            <img src="images/unterberger.jpg" alt="" />
-            <h2>Stefan Unterberger</h2>
-            <p></p>
+            <div class="overlay">
+              <div class="content">
+                so good
+              </div>
+            </div>
         </div> 
         <div class="members">
             <img src="images/sparber.png" alt="" />
             <h2>Franz Komposter</h2>
-            <p></p>
+            <div class="overlay">
+              <div class="content">
+                so good
+              </div>
+            </div>
         </div>
         <div class="members">
           <img src="images/achhammer.jpg" alt="" />
           <h2>Philipp Achhammer</h2>
-          <p></p>
+          <div class="overlay">
+            <div class="content">
+              so good
+            </div>
+          </div>
       </div>
+      <div class="members">
+        <img src="images/jonas.jpg" alt="" />
+        <h2>Hermann Popodi</h2>
+        <div class="overlay">
+          <div class="content">
+            so bad
+          </div>
+        </div>
+    </div>
       </div>
     </main>
 
