--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
         </div>
     </div>
       </div>
+      
+      <div id="stats">
+        <h1>Our Game History</h1>
+        <iframe src="https://docs.google.com/spreadsheets/d/1ks0UIuFWUgjJIdpD6rR5W3_7cFX3dXbrEF8BoWoXuDg/edit?ts=5f55f64a#gid=0" frameborder="0"></iframe>
+      </div>
     </main>
 
     <footer>
