--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
         </div>
         <div class="overviewChild" id="text">
           <h1>Colitics</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio illum tenetur dolore dolorum molestiae commodi quod. Voluptates autem sit voluptatem dolores dolore nulla suscipit repellendus, sint dolorem esse adipisci, cupiditate quae. Libero quidem laboriosam aspernatur odio quibusdam ipsam dolore autem, ab minima eaque mollitia beatae id! Ratione natus culpa blanditiis.</p>
+          <p>Das Team Colitics wurde ursprünglich am 4 Juni 2020 eingeführt, 2 Südtiroler und 1 Tiroler hatten die Idee ein Team zu gründen und mit diesem irgendwann in die 99 Damage League zu schaffen.
+            Der Name stellt sich aus Critical Politics zusammen, dass ist unteranderem auch der Grund warum jedes Teammitglied den Namen eines beliebigen Politikers ausgewählt hat.
+            Mittlerweile umfasst das ganze Team 8 Spieler diese sind auch unten aufgelistet.
+          </p>
         </div>
       </div>
       <h1>Team</h1>
-      <h2>Colitics consists of following world-class players:</H>
+      <h2>Colitics besteht aus folgenden Pro-Spielern:</H>
 
       <div id="parentMembers">
         <div class="members">
@@ -39,7 +42,7 @@
             <h2>Andreas Hofer</h2>
             <div class="overlay">
               <div class="content">
-                so good
+                Andreas Hofer – Silas, die B Legende
               </div>
             </div>
         </div> 
@@ -48,7 +51,7 @@
             <h2>Luis Durnwalder</h2>
             <div class="overlay">
               <div class="content">
-                so good
+                Luis Durnwalder – Semmel, 5€ Headset Legende und trotzdem good af
               </div>
             </div>
         </div> 
@@ -57,7 +60,7 @@
             <h2>Heinz-Christian Strache</h2>
             <div class="overlay">
               <div class="content">
-                so good
+                Heinz Christian Strache – Öma, spielt gern Main AWP und rageboi nr 1
               </div>
             </div>
         </div> 
@@ -66,7 +69,7 @@
           <h2>Stefan Unterberger</h2>
           <div class="overlay">
             <div class="content">
-              so good
+              Stefan Unterberger – Manu, don’t flame him, er spielt erst seit „2“ Wochen
             </div>
           </div>
       </div> 
@@ -75,7 +78,7 @@
             <h2>Peter Pernthaler</h2>
             <div class="overlay">
               <div class="content">
-                so good
+                Peter Pernthaler – Simon 2.0, Langfinger Joe und ballliiin
               </div>
             </div>
         </div> 
@@ -84,7 +87,7 @@
             <h2>Franz Komposter</h2>
             <div class="overlay">
               <div class="content">
-                so good
+                Franz Komposter – Sparber, hieß eigentlich Kompatscher, Heinz hat aber immer Komposter gecallt.
               </div>
             </div>
         </div>
@@ -93,7 +96,7 @@
           <h2>Philipp Achhammer</h2>
           <div class="overlay">
             <div class="content">
-              so good
+              Philipp Achhamer – Jan, Main AWP Nr 2., falls Heinz kein bock mehr hat
             </div>
           </div>
       </div>
@@ -102,14 +105,14 @@
         <h2>Hermann Popodi</h2>
         <div class="overlay">
           <div class="content">
-            so bad
+            Hermann Popodi – Joni, Lost boi und Profi im Ja sagen
           </div>
         </div>
     </div>
       </div>
       
       <div id="stats">
-        <h1>Our Game History</h1>
+        <h1>Game History</h1>
         <iframe src="https://docs.google.com/spreadsheets/d/1ks0UIuFWUgjJIdpD6rR5W3_7cFX3dXbrEF8BoWoXuDg/edit?ts=5f55f64a#gid=0" frameborder="0"></iframe>
       </div>
     </main>
