--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
         <div class="overviewChild" id="text">
           <h1>Colitics</h1>
-          <p>Das Team Colitics wurde ursprünglich am 4 Juni 2020 eingeführt, 2 Südtiroler und 1 Tiroler hatten die Idee ein Team zu gründen und mit diesem irgendwann in die 99 Damage League zu schaffen.
-            Der Name stellt sich aus Critical Politics zusammen, dass ist unteranderem auch der Grund warum jedes Teammitglied den Namen eines beliebigen Politikers ausgewählt hat.
-            Mittlerweile umfasst das ganze Team 8 Spieler diese sind auch unten aufgelistet.
+          <p>Team Colitics was originally founded on June 4, 2020. 2 South Tyroleans and 1 Tyrolean had the idea to create a team and to bring this sometime into a tournament.
+            The name is composed of Critical Politics, which is among other things the reason why each team member has chosen the name of any politician.
+            Meanwhile the whole team consists of 8 players which are listed below.
           </p>
         </div>
       </div>
@@ -42,7 +42,7 @@
             <h2>Andreas Hofer</h2>
             <div class="overlay">
               <div class="content">
-                Andreas Hofer – Silas, die B Legende
+                Andreas Hofer – Silas, Coinflip Legend
               </div>
             </div>
         </div> 
@@ -51,7 +51,7 @@
             <h2>Luis Durnwalder</h2>
             <div class="overlay">
               <div class="content">
-                Luis Durnwalder – Semmel, 5€ Headset Legende und trotzdem good af
+                Luis Durnwalder – Semmel, 5€ In-Ear Headset Legend but a Beast
               </div>
             </div>
         </div> 
@@ -60,7 +60,7 @@
             <h2>Heinz-Christian Strache</h2>
             <div class="overlay">
               <div class="content">
-                Heinz Christian Strache – Öma, spielt gern Main AWP und rageboi nr 1
+                Heinz Christian Strache – Öma, Main AWP Player and Rageboi Nr.1
               </div>
             </div>
         </div> 
@@ -69,7 +69,7 @@
           <h2>Stefan Unterberger</h2>
           <div class="overlay">
             <div class="content">
-              Stefan Unterberger – Manu, don’t flame him, er spielt erst seit „2“ Wochen
+              Stefan Unterberger – Manu, don’t flame him, his only playing for "2"weeks now.
             </div>
           </div>
       </div> 
@@ -78,7 +78,7 @@
             <h2>Peter Pernthaler</h2>
             <div class="overlay">
               <div class="content">
-                Peter Pernthaler – Simon 2.0, Langfinger Joe und ballliiin
+                Peter Pernthaler – Simon 2.0, Longfinger Boi and he's balliiin
               </div>
             </div>
         </div> 
@@ -87,7 +87,7 @@
             <h2>Franz Komposter</h2>
             <div class="overlay">
               <div class="content">
-                Franz Komposter – Sparber, hieß eigentlich Kompatscher, Heinz hat aber immer Komposter gecallt.
+                Franz Komposter – Sparber, Overall Legend but Zero enemies flashed
               </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
           <h2>Philipp Achhammer</h2>
           <div class="overlay">
             <div class="content">
-              Philipp Achhamer – Jan, Main AWP Nr 2., falls Heinz kein bock mehr hat
+              Philipp Achhamer – Jan, Anti-Mate Nr 1 - Whoever is above him on the scoreboard dies.
             </div>
           </div>
       </div>
@@ -105,7 +105,7 @@
         <h2>Hermann Popodi</h2>
         <div class="overlay">
           <div class="content">
-            Hermann Popodi – Joni, Lost boi und Profi im Ja sagen
+            Hermann Popodi – Joni, He's just lost af
           </div>
         </div>
     </div>
