--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
           </p>
         </div>
       </div>
-      
       <h1>Team</h1>
-      <h2>Colitics besteht aus folgenden Pro-Spielern:</H>
+      <h2>Colitics consists of the following pro players:</H>
 
       <div id="parentMembers">
         <div class="members">
