--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Colitics</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" 
-      type="image/png" 
-      href="images/colitics_icon.png">
+    <link rel="icon" type="image/png" href="images/colitics_icon.png" />
   </head>
   <body>
     <header>
       <h1>Team Colitics</h1>
     </header>
-
 
     <main>
       <div id="overview">
@@ -27,99 +24,106 @@
         </div>
         <div class="overviewChild" id="text">
           <h1>Colitics</h1>
-          <p>Team Colitics was originally founded on June 4, 2020. 2 South Tyroleans and 1 Tyrolean had the idea to create a team and to bring this sometime into a tournament.
-            The name is composed of Critical Politics, which is among other things the reason why each team member has chosen the name of any politician.
-            Meanwhile the whole team consists of 8 players which are listed below.
+          <p>
+            Team Colitics was originally founded on June 4, 2020. 2 South
+            Tyroleans and 1 Tyrolean had the idea to create a team and to bring
+            this sometime into a tournament. The name is composed of Critical
+            Politics, which is among other things the reason why each team
+            member has chosen the name of any politician. Meanwhile the whole
+            team consists of 8 players which are listed below.
           </p>
         </div>
       </div>
-      
-      <h1>Team</h1>
-      <h2>Colitics besteht aus folgenden Pro-Spielern:</H>
+
+      <div id="memberstitle">
+        <h1>Team</h1>
+        <h2>Colitics consists of the following pro players:</h2>
+      </div>
 
       <div id="parentMembers">
         <div class="members">
-            <img src="images/syly.png" alt="" />
-            <h2>Andreas Hofer</h2>
-            <div class="overlay">
-              <div class="content">
-                Andreas Hofer – Silas, Coinflip Legend
-              </div>
-            </div>
-        </div> 
+          <img src="images/syly.png" alt="" />
+          <h2>Andreas Hofer</h2>
+          <div class="overlay">
+            <div class="content">Andreas Hofer – Silas, Coinflip Legend</div>
+          </div>
+        </div>
         <div class="members">
-            <img src="images/omg.png" alt="" />
-            <h2>Luis Durnwalder</h2>
-            <div class="overlay">
-              <div class="content">
-                Luis Durnwalder – Semmel, 5€ In-Ear Headset Legend but a Beast
-              </div>
+          <img src="images/omg.png" alt="" />
+          <h2>Luis Durnwalder</h2>
+          <div class="overlay">
+            <div class="content">
+              Luis Durnwalder – Semmel, 5€ In-Ear Headset Legend but a Beast
             </div>
-        </div> 
+          </div>
+        </div>
         <div class="members">
-            <img src="images/oemar.jpg" alt="" />
-            <h2>Heinz-Christian Strache</h2>
-            <div class="overlay">
-              <div class="content">
-                Heinz Christian Strache – Öma, Main AWP Player and Rageboi Nr.1
-              </div>
+          <img src="images/oemar.jpg" alt="" />
+          <h2>Heinz-Christian Strache</h2>
+          <div class="overlay">
+            <div class="content">
+              Heinz Christian Strache – Öma, Main AWP Player and Rageboi Nr.1
             </div>
-        </div> 
+          </div>
+        </div>
         <div class="members">
           <img src="images/unterberger.jpg" alt="" />
           <h2>Stefan Unterberger</h2>
           <div class="overlay">
             <div class="content">
-              Stefan Unterberger – Manu, don’t flame him, his only playing for "2"weeks now.
+              Stefan Unterberger – Manu, don’t flame him, his only playing for
+              "2"weeks now.
             </div>
           </div>
-      </div> 
+        </div>
         <div class="members">
-            <img src="images/simonn.png" alt="" />
-            <h2>Peter Pernthaler</h2>
-            <div class="overlay">
-              <div class="content">
-                Peter Pernthaler – Simon 2.0, Longfinger Boi and he's balliiin
-              </div>
+          <img src="images/simonn.png" alt="" />
+          <h2>Peter Pernthaler</h2>
+          <div class="overlay">
+            <div class="content">
+              Peter Pernthaler – Simon 2.0, Longfinger Boi and he's balliiin
             </div>
-        </div> 
+          </div>
+        </div>
         <div class="members">
-            <img src="images/sparber.png" alt="" />
-            <h2>Franz Komposter</h2>
-            <div class="overlay">
-              <div class="content">
-                Franz Komposter – Sparber, Overall Legend but Zero enemies flashed
-              </div>
+          <img src="images/sparber.png" alt="" />
+          <h2>Franz Komposter</h2>
+          <div class="overlay">
+            <div class="content">
+              Franz Komposter – Sparber, Overall Legend but Zero enemies flashed
             </div>
+          </div>
         </div>
         <div class="members">
           <img src="images/achhammer.jpg" alt="" />
           <h2>Philipp Achhammer</h2>
           <div class="overlay">
             <div class="content">
-              Philipp Achhamer – Jan, Anti-Mate Nr 1 - Whoever is above him on the scoreboard dies.
+              Philipp Achhamer – Jan, Anti-Mate Nr 1 - Whoever is above him on
+              the scoreboard dies.
             </div>
           </div>
-      </div>
-      <div class="members">
-        <img src="images/jonas.jpg" alt="" />
-        <h2>Hermann Popodi</h2>
-        <div class="overlay">
-          <div class="content">
-            Hermann Popodi – Joni, He's just lost af
+        </div>
+        <div class="members">
+          <img src="images/jonas.jpg" alt="" />
+          <h2>Hermann Popodi</h2>
+          <div class="overlay">
+            <div class="content">Hermann Popodi – Joni, He's just lost af</div>
           </div>
         </div>
-    </div>
       </div>
-      
+
       <div id="stats">
         <h1>Game History</h1>
-        <iframe src="https://docs.google.com/spreadsheets/d/1ks0UIuFWUgjJIdpD6rR5W3_7cFX3dXbrEF8BoWoXuDg/edit?ts=5f55f64a#gid=0" frameborder="0"></iframe>
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1ks0UIuFWUgjJIdpD6rR5W3_7cFX3dXbrEF8BoWoXuDg/edit?ts=5f55f64a#gid=0"
+          frameborder="0"
+        ></iframe>
       </div>
     </main>
 
     <footer>
-        <p>&copy;2020 Team Colitics</p>
+      <p>&copy;2020 Team Colitics</p>
     </footer>
   </body>
 </html>
