--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div> 
         <div class="members">
-            <img src="images/oemar3.png" alt="" />
+            <img src="images/oemar.jpg" alt="" />
             <h2>Heinz-Christian Strache</h2>
             <div class="overlay">
               <div class="content">
