--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h2>Stefan Unterberger</h2>
           <div class="overlay">
             <div class="content">
-              Stefan Unterberger – Manu, don’t flame him, his only playing for
+              Stefan Unterberger – Manu, don’t flame him, he's only playing for
               "2"weeks now.
             </div>
           </div>
