--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <h2>Stefan Unterberger</h2>
           <div class="overlay">
             <div class="content">
-              Stefan Unterberger – Manu, don’t flame him, he's only playing for
-              "2"weeks now.
+              Stefan Unterberger – Manu, don’t flame him, He plays only 
+              since 2 weeks
             </div>
           </div>
         </div>
