--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="overlay">
             <div class="content">
               Stefan Unterberger – Manu, don’t flame him, He plays only 
-              since 2 weeks
+              since "2" weeks
             </div>
           </div>
         </div>
