--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <h2>Philipp Achhammer</h2>
           <div class="overlay">
             <div class="content">
-              Philipp Achhamer – Jan, Anti-Mate Nr 1 - Whoever is above him on
+              Philipp Achhammer – Jan, Anti-Mate Nr 1 - Whoever is above him on
               the scoreboard dies.
             </div>
           </div>
