--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <h2>Stefan Unterberger</h2>
           <div class="overlay">
             <div class="content">
-              Stefan Unterberger – Manu, don’t flame him, He plays only 
-              since "2" weeks
+              Stefan Unterberger – Manu, don’t flame him, He plays only since
+              "2" weeks
             </div>
           </div>
         </div>
@@ -127,6 +127,32 @@
         ></iframe>
       </div>
     </main>
+
+    <div id="login-form">
+      <div class="login-box">
+        <h2>Message Us</h2>
+        <form>
+          <div class="user-box">
+            <input
+              style="word-break: break-word"
+              type="text"
+              name=""
+              required=""
+            />
+            <label>Name</label>
+          </div>
+          <div class="user-box">
+            <input type="text" name="" required="" />
+            <label>Email</label>
+          </div>
+          <div class="user-box">
+            <textarea required=""></textarea>
+            <label>Message</label>
+          </div>
+        </form>
+        <button>Submit</button>
+      </div>
+    </div>
 
     <footer>
       <p>&copy;2020 Team Colitics</p>
