--- a/index.html
+++ b/index.html
@@ -111,10 +111,17 @@
         </div>
 
         <div class="members">
-          <img src="images/jonas.jpg" alt="" />
+
+          <a href="stats.html">
+            <img src="images/jonas.jpg" alt="" />
           <h2>Hermann Popodi</h2>
           <div class="overlay">
-            <div class="content">Hermann Popodi – Joni, He's just lost af</div>
+            <div class="content">Hermann Popodi – Joni, He's just lost af
+              
+            </div>
+
+          </a>
+          
           </div>
         </div>
       </div>
