--- a/statsstefan.html
+++ b/statsstefan.html
@@ -7,26 +7,30 @@
     <body>
         <header>
             <nav id="nav">
-                <a href="index.html">Colitics</a>
+				<a href="index.html">Colitics</a>
+				<a href="https://steamcommunity.com/profiles/76561199052057829" target="_blank">
+					<img src="images/steam.png"  alt="" ALIGN="right">
+				</a>
             </nav>
         </header>
 
         <main>
 			<div id="steckbrief">
-				<img src="images/joniomega.png" alt="" height=300px>
+				<img src="images/wodlipepegapng.png" alt="" height=300px width=35%>
 
 				<div id="titles">
 					<div id="name">
-						<p>Hermann Popodi</p>
-						<img src="images/Italy-Flag.jpg" alt="" width=20px height=10px>
+						<p>Stefan Unterberger</p>
 					</div>
 					<p>Age: </p>
 					<p>Current Team: </p>
+					<p>Nationality: </p>
 				</div>
 				<div id="infos">
 					
-					<p>08.03.2002 (18 years)</p>
+					<p>26.07.2001 (19 years)</p>
 					<p>Colitics</p>
+					<img src="images/Italy-Flag.jpg" alt="" width=30px height=15px>
 				</div>
 		
 			</div>
