--- a/statsandreas.html
+++ b/statsandreas.html
@@ -30,7 +30,7 @@
 					
 					<p>12.07.2002 (18 years)</p>
 					<p>Colitics</p>
-					<img src="images/Italy-Flag.jpg" alt="" width=30px height=15px>
+					<img src="images/Italy-Flag.jpg" alt="" width=30px>
 				</div>
 		
 			</div>
