--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colitics</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="image/png" href="images/colitics_icon.png" />
   </head>
@@ -17,18 +14,15 @@
     </header>
     <main>
       <div id="overview">
-        <div class="overviewChild">
+        <div>
           <img src="images/colitics_pic.jpg" alt="" />
         </div>
-        <div class="overviewChild" id="text">
+        <div id="text">
           <h1>Colitics</h1>
           <p>
-            Team Colitics was originally founded on June 4, 2020. 2 South
-            Tyroleans and 1 Tyrolean had the idea to create a team and to bring
-            this sometime into a tournament. The name is composed of Critical
-            Politics, which is among other things the reason why each team
-            member has chosen the name of any politician. Meanwhile the whole
-            team consists of 8 players which are listed below.
+            Team Colitics was originally founded on June 4, 2020. 2 South Tyroleans and 1 Tyrolean had the idea to create a team and to bring this
+            sometime into a tournament. The name is composed of Critical Politics, which is among other things the reason why each team member has
+            chosen the name of any politician. Meanwhile the whole team consists of 8 players which are listed below.
           </p>
         </div>
       </div>
@@ -40,7 +34,7 @@
 
       <div id="parentMembers">
         <div class="members">
-          <a href="statsandreas.html"></a>
+          <a href="statsandreas.html">
             <img src="images/syly.png" alt="" />
             <h2>Andreas Hofer</h2>
             <div class="overlay">
@@ -54,9 +48,7 @@
             <img src="images/omg.png" alt="" />
             <h2>Luis Durnwalder</h2>
             <div class="overlay">
-              <div class="content">
-                Luis Durnwalder – Semmel, 5€ In-Ear Headset Legend but a Beast
-              </div>
+              <div class="content">Luis Durnwalder – Semmel, 5€ In-Ear Headset Legend but a Beast</div>
             </div>
           </a>
         </div>
@@ -66,9 +58,7 @@
             <img src="images/oemar5.png" alt="" />
             <h2>Heinz-Christian Strache</h2>
             <div class="overlay">
-              <div class="content">
-                Heinz Christian Strache – Öma, Main AWP Player and Rageboi Nr.1
-              </div>
+              <div class="content">Heinz Christian Strache – Öma, Main AWP Player and Rageboi Nr.1</div>
             </div>
           </a>
         </div>
@@ -78,10 +68,7 @@
             <img src="images/unterberger.jpg" alt="" />
             <h2>Stefan Unterberger</h2>
             <div class="overlay">
-              <div class="content">
-                Stefan Unterberger – Manu, don’t flame him, He plays only since
-                "2" weeks
-              </div>
+              <div class="content">Stefan Unterberger – Manu, don’t flame him, He plays only since "2" weeks</div>
             </div>
           </a>
         </div>
@@ -91,9 +78,7 @@
             <img src="images/simonn.png" alt="" />
             <h2>Peter Pernthaler</h2>
             <div class="overlay">
-              <div class="content">
-                Peter Pernthaler – Simon 2.0, Longfinger Boi and he's balliiin
-              </div>
+              <div class="content">Peter Pernthaler – Simon 2.0, Longfinger Boi and he's balliiin</div>
             </div>
           </a>
         </div>
@@ -103,10 +88,7 @@
             <img src="images/sparber.png" alt="" />
             <h2>Franz Komposter</h2>
             <div class="overlay">
-              <div class="content">
-                Franz Komposter – Sparber, Overall Legend but Zero enemies
-                flashed
-              </div>
+              <div class="content">Franz Komposter – Sparber, Overall Legend but Zero enemies flashed</div>
             </div>
           </a>
         </div>
@@ -116,10 +98,7 @@
             <img src="images/achhammer.jpg" alt="" />
             <h2>Philipp Achhammer</h2>
             <div class="overlay">
-              <div class="content">
-                Philipp Achhammer – Jan, Anti-Mate Nr 1 - Whoever is above him
-                on the scoreboard dies.
-              </div>
+              <div class="content">Philipp Achhammer – Jan, Anti-Mate Nr 1 - Whoever is above him on the scoreboard dies.</div>
             </div>
           </a>
         </div>
@@ -129,21 +108,19 @@
             <img src="images/jonas.jpg" alt="" />
             <h2>Hermann Popodi</h2>
             <div class="overlay">
-              <div class="content">
-                Hermann Popodi – Joni, He's just lost af
-              </div>
+              <div class="content">Hermann Popodi – Joni, He's just lost af</div>
             </div>
           </a>
         </div>
       </div>
 
-      <div id="stats">
+      <!-- <div id="stats">
         <h1>Game History</h1>
-        <iframe
+         <iframe
           src="https://docs.google.com/spreadsheets/d/1ks0UIuFWUgjJIdpD6rR5W3_7cFX3dXbrEF8BoWoXuDg/edit?ts=5f55f64a#gid=0"
           frameborder="0"
-        ></iframe>
-      </div>
+        ></iframe> 
+      </div> -->
     </main>
 
     <div id="login-form">
@@ -151,12 +128,7 @@
         <h2>Message Us</h2>
         <form>
           <div class="user-box">
-            <input
-              style="word-break: break-word"
-              type="text"
-              name=""
-              required=""
-            />
+            <input style="word-break: break-word" type="text" name="" required="" />
             <label>Name</label>
           </div>
           <div class="user-box">
