--- a/statsfranz.html
+++ b/statsfranz.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Franz Komposter</title>
     <link rel="stylesheet" href="styles\stats.css" type="text/css" />
   </head>
 
   <body>
-    <header>
-      <nav id="nav">
-        <a href="index.html">Colitics</a>
-        <a
-          href="https://steamcommunity.com/profiles/76561198271665961"
-          target="_blank"
-        >
-          <img src="images/steam.png" alt="" align="right" />
-        </a>
-      </nav>
-    </header>
+    <nav id="nav">
+      <a href="index.html">Colitics</a>
+      <a href="https://steamcommunity.com/profiles/76561198271665961" target="_blank">
+        <img src="images/steam.png" alt="" />
+      </a>
+    </nav>
 
-    <main>
-      <div id="steckbrief">
-        <img src="images/sparberstats.png" alt="" height="300px" width="35%" />
-
-        <div id="titles">
-          <div id="name">
-            <p>Franz Kompatscher</p>
+    <div id="steckbrief">
+      <img src="images/sparberstats.png" alt="" />
+      <div>
+        <h3>Franz Kompatscher</h3>
+        <div id="text">
+          <div id="titles">
+            <p>Age:</p>
+            <p>Current Team:</p>
+            <p>Nationality:</p>
           </div>
-          <p>Age:</p>
-          <p>Current Team:</p>
-          <p>Nationality:</p>
-        </div>
-        <div id="infos">
-          <p>23.06.2002 (18 years)</p>
-          <p>Colitics</p>
-          <img src="images/Italy-Flag.jpg" alt="" width="30px" height="15px" />
+          <div id="infos">
+            <p>23.06.2002 (18 years)</p>
+            <p>Colitics</p>
+            <img src="images/Italy-Flag.jpg" alt="" />
+          </div>
         </div>
       </div>
-
-      <img src="stats.png" alt="Stats" />
-    </main>
-
-    <footer></footer>
+    </div>
+    <footer>
+      <p>&copy;2020 Team Colitics</p>
+    </footer>
   </body>
 </html>
