--- a/statsphilipp.html
+++ b/statsphilipp.html
@@ -1,50 +1,40 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <link rel="stylesheet" href="styles\stats.css" type="text/css">
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Philipp Achammer</title>
+    <link rel="stylesheet" href="styles\stats.css" type="text/css" />
+  </head>
 
-    <body>
-        <header>
-            <nav id="nav">
-				<a href="index.html">Colitics</a>
-				<a href="https://steamcommunity.com/profiles/76561198345724236" target="_blank">
-					<img src="images/steam.png"  alt="" ALIGN="right">
-				</a>
-            </nav>
-        </header>
+  <body>
+    <nav id="nav">
+      <a href="index.html">Colitics</a>
+      <a href="https://steamcommunity.com/profiles/76561198345724236" target="_blank">
+        <img src="images/steam.png" alt="" />
+      </a>
+    </nav>
 
-        <main>
-			<div id="steckbrief">
-				<img src="images/jan.png" alt="" height=300px width=35%>
-
-				<div id="titles">
-					<div id="name">
-						<p>Philipp Achammer</p>
-					</div>
-					<p>Age: </p>
-					<p>Current Team: </p>
-					<p>Nationality: </p>
-				</div>
-				<div id="infos">
-					
-					<p>28.03.2002 (18 years)</p>
-					<p>Colitics</p>
-					<img src="images/Italy-Flag.jpg" alt="" width=30px height=15px>
-				</div>
-		
-			</div>
-				<style type="text/css">
-			
-			<img src="stats.png" alt="Stats">
-
-        </main>
-
-        <footer>
-
-        
-        </footer>
-    </body>
-
-
+    <div id="steckbrief">
+      <img src="images/jan.png" alt="" />
+      <div>
+        <h3>Philipp Achammer</h3>
+        <div id="text">
+          <div id="titles">
+            <p>Age:</p>
+            <p>Current Team:</p>
+            <p>Nationality:</p>
+          </div>
+          <div id="infos">
+            <p>28.03.2002 (18 years)</p>
+            <p>Colitics</p>
+            <img src="images/Italy-Flag.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <p>&copy;2020 Team Colitics</p>
+    </footer>
+  </body>
 </html>
