--- a/statshermann.html
+++ b/statshermann.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hermann Popodi</title>
     <link rel="stylesheet" href="styles\stats.css" type="text/css" />
+    <link rel="icon" type="image/png" href="./images/Joniomega.png" />
+    <script src="./scripts/stats-script.js" defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+      integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/CSSRulePlugin.min.js"></script>
   </head>
 
   <body>
@@ -17,9 +26,9 @@
 
     <div id="steckbrief">
       <img src="images/Joniomega.png" alt="" />
-      <div>
-        <h3>Hermann Popodi</h3>
-        <div id="text">
+      <div id="text-field">
+        <h3 class="reveal">Hermann Popodi</h3>
+        <div id="text" class="reveal">
           <div id="titles">
             <p>Age:</p>
             <p>Current Team:</p>
