--- a/index.html
+++ b/index.html
@@ -6,24 +6,40 @@
     <title>Colitics</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
+    <script src="./scripts/script.js" defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+      integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+
     <link rel="icon" type="image/png" href="images/colitics_icon.png" />
   </head>
   <body>
-    <header>
-      <h1>Team Colitics</h1>
-    </header>
     <main>
-      <div id="overview">
-        <div>
-          <img src="images/colitics_pic.jpg" alt="" />
+      <div id="hero">
+        <div id="header">
+          <h1>Team Colitics</h1>
+          <nav>
+            <a href="#">Home</a>
+            <a href="#memberstitle">Team</a>
+            <a href="#login-form">Contact</a>
+          </nav>
         </div>
-        <div id="text">
-          <h1>Colitics</h1>
-          <p>
-            Team Colitics was originally founded on June 4, 2020. 2 South Tyroleans and 1 Tyrolean had the idea to create a team and to bring this
-            sometime into a tournament. The name is composed of Critical Politics, which is among other things the reason why each team member has
-            chosen the name of any politician. Meanwhile the whole team consists of 8 players which are listed below.
-          </p>
+
+        <div id="overview">
+          <div>
+            <img src="images/colitics_pic.jpg" alt="" />
+          </div>
+          <div id="text">
+            <h1>Colitics</h1>
+            <p>
+              Team Colitics was originally founded on June 4, 2020. 2 South Tyroleans and 1 Tyrolean had the idea to create a team and to bring this
+              sometime into a tournament. The name is composed of Critical Politics, which is among other things the reason why each team member has
+              chosen the name of any politician. Meanwhile the whole team consists of 8 players which are listed below.
+            </p>
+          </div>
         </div>
       </div>
 
@@ -140,7 +156,7 @@
             <label>Message</label>
           </div>
         </form>
-        <button>Submit</button>
+        <button onclick="alert('sike')">Submit</button>
       </div>
     </div>
 
