--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <div id="hero">
         <div id="header">
-          <h1>Team Colitics</h1>
+          <a onclick="history.go(0);" href="#">Team Colitics</a>
           <nav>
             <a href="#">Home</a>
             <a href="#memberstitle">Team</a>
@@ -141,7 +141,7 @@
 
     <div id="login-form">
       <div class="login-box">
-        <h2>Message Us</h2>
+        <h1>Message Us</h1>
         <form>
           <div class="user-box">
             <input style="word-break: break-word" type="text" name="" required="" />
